--- a/passwordManagerProject/index.html
+++ b/passwordManagerProject/index.html
@@ -5,9 +5,39 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Django Password Manager</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
         <link rel="stylesheet" href="style.css">
         <script src="main.js"></script>
 
     </head>
-    <body></body>
+    <body>
+        <header>
+            <nav>
+                <div class="brand"><a href=""><i class="fa fa-lock" aria-hidden="true"></i>&nbsp;Password Manager</a></div>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Login</a></li>
+                    <li><a href="">SignUp</a></li>
+                </ul>
+            </nav>
+        </header>
+        
+        <!--Modals-->
+        <div class="modals-wrapper">
+            <span id="close-modal"><i class="fa fa-times"></i></span>
+            <!--login modal-->
+            <div class="modal" id="login-modal">
+                <form action="">
+                    <h2>Login</h2>
+                    <input type="text" name="username" placeholder="username">
+                    <input type="email" name="email" placeholder="email">
+                    <input type="submit" value="login">
+                </form>
+            </div>
+        </div>
+
+        <footer>
+            <a href="">Link To The Project</a>
+        </footer>
+    </body>
 </html>
